--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
     text-transform: uppercase;
     text-shadow: 0 0 10px rgba(255, 222, 89, 0.7);
     animation: pulse 2s infinite;
-    font-family: 'DandyTitle', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
 }
 
 @keyframes pulse {
@@ -91,7 +91,7 @@ header {
     color: var(--primary);
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-family: 'DandyTitle', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
 }
 
 .nav-links {
@@ -137,7 +137,7 @@ header {
     font-size: 1.5rem;
     margin-bottom: 2rem;
     opacity: 0.9;
-    font-family: 'DandyHeading', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
     font-weight: lighter;
 }
 
@@ -151,7 +151,7 @@ header {
     color: var(--primary);
     margin-bottom: 3rem;
     text-align: center;
-    font-family: 'DandyHeading', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -195,7 +195,7 @@ header {
     font-weight: 800;
     margin-bottom: 0.5rem;
     color: var(--primary);
-    font-family: 'DandyTitle', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -496,7 +496,7 @@ footer {
 }
 
 h1, h2, h3, h4 {
-    font-family: 'DandyHeading', sans-serif;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
 }
 
 .copyright {
